# static-http-cache

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  coverage.sh
examples/: simple.rs  urlcat.rs
src/: db.rs  lib.rs  reqwest_mock.rs
