[package]
name = "static-http-cache"
version = "0.3.0" # remember to update html_root_url
authors = ["Tim Allen <screwtape@froup.com>", "Matthias Fauconneau <matthias.fauconneau@gmail.com>"]
description = "A local cache for static HTTP resources"
license = "MIT"
repository = "https://gitlab.com/Screwtapello/static_http_cache"
readme = "README.md"
keywords = ["http", "cache"]
categories = ["caching", "network-programming", "web-programming::http-client"]

[dependencies]
anyhow = "1.0.31"
crypto-hash = "0.3.4"
log = "0.4.8"
reqwest = { version = "0.10.4", features = ["blocking"] }
sqlite = "0.25.0"
rand = "0.7.3"

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "0.7.1"
